--- a/Ej10/css/style.css
+++ b/Ej10/css/style.css
@@ -1,7 +1,13 @@
 html
 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 12px;
+}
+body
+{
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
 h1
 {
